--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,7 +44,8 @@
                 <a href="/?region={{ r }}">{{ r.capitalize() }}</a>{% if not loop.last %} | {% endif %}
             {% endfor %}
         </div>
-        <h2 style="text-align:center;">🌊 {{ top_location }} currently has the largest waves!</h2>
+         <h2 style="text-align:center; color: #80cbc4;">🌊🌊🌊  {{ top_location }} currently has the largest waves! 🌊🌊🌊 </h2>
+
         <img src="{{ chart_url }}" alt="Wave Chart" class="chart">
         <div style="text-align:center; margin: 20px;">
     <form action="/forecast">
