--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="text-align:center; color:#80cbc4;">Florida Surf Report ({{ region.capitalize() }})</h1>
+        <h1 style="text-align:center; color:#80cbc4;">Florida Surf Report by Rob Pastori }})</h1>
         <div class="selector">
             {% for r in ['north', 'central', 'south'] %}
                 <a href="/?region={{ r }}">{{ r.capitalize() }}</a>{% if not loop.last %} | {% endif %}
